# BLACKVEIN

./: .env.example  .env.langfuse.example  .gitignore  AGENCY_CAPABILITY_MATRIX.md  AGENTS.md  ARCHITECTURE.md  AUDIT_RESULT.md  CHANGED_FILES.txt  CHANGED_FILES_STORY_RUNTIME_EXPERIENCE.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DETACHED_ERROR_SUMMARY.txt  DETACHED_INSTANCE_ANALYSIS.md  DEVELOPMENT_SETUP.md  DOCKER_UP_COMPLETE_AUDIT.md  DOCKER_UP_LANGFUSE_REPAIR.md  Dockerfile  EXTENSION_IMPLEMENTATION_PLAN.md  EXTENSION_TASKS.md  GOVERNANCE_ENFORCEMENT_RESULT.md  IMPLEMENTATION-SUMMARY-PHASE-3-4.md  IMPLEMENTATION_COMPLETE.md  LANGFUSE_ADMIN_AUDIT_REPORT.md  LANGFUSE_ADMIN_IMPLEMENTATION.md  LANGFUSE_ADMIN_IMPLEMENTATION_COMPLETE.md  LANGFUSE_COMPLETE_DELIVERY.md  LANGFUSE_DELIVERABLES.md  LANGFUSE_IMPLEMENTATION_BLUEPRINT.md  LANGFUSE_IMPLEMENTATION_REPORT.md  LANGFUSE_INITIALIZATION_AND_GOVERNANCE.md  LANGFUSE_INTEGRATION_COMPLETE.md  LANGFUSE_TRACE_COMPLETE_VIEW.md  LANGFUSE_TRACE_VERIFICATION.md  LANGFUSE_TRACING_SETUP.md  Modelfile  NARRATIVE_FORMATTING_ENHANCEMENT.md  NEXT_TARGET_ASSESSMENT.md  NPC_INTERACTION_AND_INTERACTIVITY_PLAN.md  PHASES_1_3_COMPLETION_REPORT.md  (+70 more)
'fy'-suites/: APPLY_PATCH.md  CHANGED_FILES.txt  CHANGED_FILES_FOLLOWPASS.txt  CHANGED_FILES_FOLLOWPASS2.txt  CHANGED_FILES_FOLLOWPASS3.txt  CHANGED_FILES_PHASE58.txt  CHANGED_FILES_STAGE9.txt  CHANGELOG.md  IMPLEMENTATION_ITERATION_3_CHANGED_FILES.txt  MVP_BUILD_REPORT.md  PATCH_NOTES.md  README.md  STAGE14_RELEASE_REPORT.md  STAGE15_MVPIFY_AI_ENABLEMENT_REPORT.md  STAGE3_RELEASE_REPORT.md  STAGE4_RELEASE_REPORT.md  STAGE5_RELEASE_REPORT.md  STAGE9_AI_QUALITY_RELEASE_REPORT.md  fy_governance_enforcement.yaml  pyproject.toml  pytest.ini
'fy'-suites/coda/: suite_ownership.json
'fy'-suites/contractify/: CHANGED_FILES.txt  CONTRACT_GOVERNANCE_SCOPE.md  README.md  __init__.py  contract-audit-task.md  contract-reset-task.md  contract-solve-task.md  contract_governance_input.md
'fy'-suites/delagecy/: README.md  delagecy_registry.json  legacy_removal_tracker.md
'fy'-suites/despaghettify/: README.md  baseline_metrics.json  despaghettification_completed_log.md  despaghettification_implementation_input.md  spaghetti-check-task.md  spaghetti-reset-task.md  spaghetti-setup.md  spaghetti-solve-task.md
'fy'-suites/diagnosta/: suite_ownership.json
'fy'-suites/docify/: README.md  baseline_docstring_coverage.json  documentation-audit-task.md  documentation-check-task.md  documentation-docstring-synthesize-task.md  documentation_implementation_input.md
'fy'-suites/dockerify/: __init__.py  dockerify_implementation_input.md
'fy'-suites/docs/: README.md
'fy'-suites/documentify/: README.md  __init__.py  documentify_implementation_input.md
'fy'-suites/internal/: README.md
'fy'-suites/mvpify/: mvpify-audit-task.md  mvpify-check-task.md  mvpify-reset-task.md  mvpify-solve-task.md  mvpify_implementation_input.md
'fy'-suites/testify/: testify_implementation_input.md
MVP/administration-tool/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  test_escape_html.js
MVP/ai_stack/: RETRIEVAL_QUALITY_TASK2.md  __init__.py  canon_improvement_contract.py  capabilities.py  dramatic_effect_contract.py  dramatic_effect_gate.py  goc_field_initialization_envelope.py  goc_g9_roadmap_scenarios.py  goc_gate_evaluation.py  goc_s4_misinterpretation_scenario.py  goc_scene_identity.py  (+19 more)
administration-tool/: .coveragerc  .env.example  Dockerfile  app.py  frontend_app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  route_registration.py  route_registration_manage.py  route_registration_manage_sections.py  route_registration_pages.py  route_registration_proxy.py  route_registration_security.py
ai_stack/: AI_INTEGRATION_GUIDE.md  MCP_AGENT_CONTRACT.md  PROMPTS.md  RETRIEVAL_QUALITY_TASK2.md  __init__.py  action_ontology.py  action_resolution_contracts.py  active_listening_contracts.py  actor_survival_telemetry.py  adr0041_langfuse_evidence.py  ai_config.py  authority_contracts.py  autonomous_tick.py  beat_lifecycle_contracts.py  block_stream_dual_mode.py  callback_web_contracts.py  canon_improvement_engine.py  canonical_path_resolver.py  canonical_prompt_catalog.py  canonical_step_renderer.py  capabilities.py  capabilities_default_registry.py  capabilities_registry_context_writers.py  capabilities_registry_context_writers_handlers.py  capabilities_registry_research_canon.py  capabilities_registry_research_canon_handlers.py  capabilities_registry_research_canon_impl.py  capabilities_registry_research_canon_registration_groups.py  capability_selector.py  capability_validator_dispatch.py  capability_validator_plan.py  capability_validator_registry.py  character_mind_contract.py  character_mind_goc.py  character_voice_contract.py  character_voice_goc.py  character_voice_semantic_classifier.py  character_voice_validation.py  context_synthesis_engine.py  diagnostics_envelope.py  (+186 more)
backend/: .coveragerc  .env.example  Dockerfile  README.md  W2.1_GATE_FINAL_AUDIT.md  W2.1_R2_IMPLEMENTATION_REPORT.md  W2.1_R3_IMPLEMENTATION_REPORT.md  app.py  docker-compose.play-local.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run.py  setup_env.py  test_api_and_error_utils_patch3.py  test_area_service_patch3.py  test_game_service_patch3.py  test_timing_demo.py
frontend/: Dockerfile  README.md  jest.config.cjs  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
story_runtime_core/: __init__.py  adapters.py  builtin_experience_templates.py  committed_truth.py  content_locale.py  director_surface_hints.py  experience_template_models.py  goc_solo_builtin_catalog.py  goc_solo_builtin_catalog_actions.py  goc_solo_builtin_roles_rooms.py  goc_solo_builtin_template.py  input_interpreter.py  langfuse_tracing_environment.py  language_adapter.py  model_registry.py  models.py  observability_tree_policy.py  player_input_intent_contract.py  pyproject.toml  runtime_delivery.py
(+6104 files in other folders)
