[project]
name = "world-of-shadows-administration-tool"
version = "1.0.0"
description = "Administration tool for Better Tomorrow game platform"
requires-python = ">=3.14,<3.15"
dependencies = [
    "Flask>=3.0.6,<4",
    "werkzeug>=3.1.5,<4",
    "python-dotenv>=1.0.0,<2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0,<9",
    "pytest-timeout>=2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
