[project]
name = "world-of-shadows-ai-stack"
version = "1.0.0"
description = "AI stack: capabilities registry, MCP surface, and runtime integration for World of Shadows"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
retrieval = [
    "numpy>=1.24.0,<3",
    "fastembed>=0.3.0,<1",
    "langchain>=1.2.0,<2",
    "langchain-core>=0.1.0",
]
langchain = [
    "langchain>=1.2.0,<2",
    "langchain-core>=0.1.0",
    "langgraph>=1.0.3,<2",
]
test = [
    "pytest>=7.0,<9",
    "pytest-asyncio>=0.21,<1",
    "pytest-cov>=4.0,<6",
]
all = [
    "numpy>=1.24.0,<3",
    "fastembed>=0.3.0,<1",
    "langchain>=1.2.0,<2",
    "langchain-core>=0.1.0",
    "langgraph>=1.0.3,<2",
    "pytest>=7.0,<9",
    "pytest-asyncio>=0.21,<1",
    "pytest-cov>=4.0,<6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
