[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-of-shadows-ai-stack"
version = "1.0.0"
description = "AI stack: capabilities registry, MCP surface, and runtime integration for World of Shadows"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
retrieval = [
    "numpy>=1.24.0,<3",
    "fastembed>=0.3.0,<1",
    "langchain>=1.2.0,<2",
    "langchain-core>=1.2.0,<2",
]
langchain = [
    "langchain>=1.2.0,<2",
    "langchain-core>=1.2.0,<2",
    "langgraph>=1.0.3,<2",
]
# Everything needed for `pytest ai_stack/tests` (LangGraph + RAG + YAML GoC loaders).
# Without these, `langgraph_runtime` import fails and `ai_stack/__init__.py` omits
# RuntimeTurnGraphExecutor from `__all__` by design (MCP / lightweight import path).
test = [
    "pytest>=7.0,<9",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=4.0,<6",
    "pytest-timeout>=2.1",
    "langchain>=1.2.0,<2",
    "langchain-core>=1.2.0,<2",
    "langgraph>=1.0.3,<2",
    "numpy>=1.24.0,<3",
    "fastembed>=0.3.0,<1",
    "pyyaml>=6.0,<7",
    "httpx>=0.27.0,<1",
]
all = [
    "numpy>=1.24.0,<3",
    "fastembed>=0.3.0,<1",
    "langchain>=1.2.0,<2",
    "langchain-core>=1.2.0,<2",
    "langgraph>=1.0.3,<2",
    "pytest>=7.0,<9",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=4.0,<6",
]

[tool.setuptools]
# Flat tree under this directory is imported as ``ai_stack.*`` (repo adds parent to PYTHONPATH).
# Without ``package-dir``, setuptools auto-discovers ``langchain_integration`` and ``narrative``
# as separate top-level packages and editable installs fail.
package-dir = {"ai_stack" = "."}
packages = [
    "ai_stack",
    "ai_stack.langchain_integration",
    "ai_stack.narrative",
    "ai_stack.narrative.research",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--capture=sys"
markers = [
    "foundation_gate: MVP01/02 foundation gate tests",
    "mvp1: MVP01 experience identity gate tests",
    "mvp2: MVP02 runtime state and actor lanes gate tests",
    "mvp3: MVP03 live dramatic scene simulator gate tests",
    "mvp4: MVP04 observability diagnostics and narrative gov gate tests",
    "mvp5: MVP05 frontend and experience-shell gate tests",
    "e2e: end-to-end tests",
    "integration: integration tests",
    "runtime: runtime layer tests",
]
