[project]
name = "world-of-shadows-frontend"
version = "1.0.0"
description = "Frontend application for Better Tomorrow game platform"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.6,<4",
    "python-dotenv>=1.0.0,<2",
    "requests>=2.31.0,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0,<9",
    "pytest-timeout>=2.1",
    "requests>=2.31.0,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "test_*.js"]
markers = [
    "mvp5: MVP5 block renderer, typewriter, orchestration tests",
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end browser tests",
]
