[project]
name = "world-of-shadows-administration-tool"
version = "1.0.0"
description = "Administration tool for World of Shadows game platform"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0.6,<4",
    "werkzeug>=3.1.5,<4",
    "python-dotenv>=1.0.0,<2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0,<9",
    "pytest-timeout>=2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
