[project]
name = "world-of-shadows-frontend"
version = "1.0.0"
description = "Frontend application for World of Shadows game platform"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.6,<4",
    "python-dotenv>=1.0.0,<2",
    "requests>=2.31.0,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0,<9",
    "pytest-timeout>=2.1",
    "requests>=2.31.0,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
