[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "story-runtime-core"
version = "0.1.0"
description = "Shared canonical story runtime core for World of Shadows."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0,<9",
  "pytest-asyncio>=0.21,<1",
  "pytest-timeout>=2.1",
]

# Explicit layout: pyproject.toml lives next to package modules. Newer setuptools
# rejects implicit "flat-layout" multi-module discovery; map the import package
# name to the project root directory.
[tool.setuptools]
package-dir = { "story_runtime_core" = "." }
packages = ["story_runtime_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
