[project]
name = "world-of-shadows-engine"
version = "1.0.0"
description = "World engine for World of Shadows game platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<1",
    "fastembed>=0.3.0,<1",
    "httpx>=0.27.0,<1",
    "langchain>=1.2.0,<2",
    "langchain-core>=0.1.0",
    "langgraph>=1.0.3,<2",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0,<9",
    "pytest-asyncio>=0.21,<1",
    "pytest-timeout>=2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
