[project]
name = "wos-mcp-server"
version = "0.1.0"
description = "MCP Phase A1.1 server skeleton for World of Shadows"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0,<9",
    "pytest-timeout>=2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
